--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "np.random.seed(4203030)\n",
+    "\n",
+    "\n",
     "class material:\n",
-    "    def __init__(self,name:str,sigma_a,sigma_s,sigma_f,nu):\n",
+    "    def __init__(self,name:str,sigma_a:float,sigma_s:float,sigma_f:float,nu:float):\n",
     "        \n",
     "        self.name=name\n",
     "        self.sigma_a=sigma_a\n",
@@ -15,19 +19,37 @@
     "        self.sigma_f=sigma_f\n",
     "        self.nu=nu\n",
     "\n",
-    "        self.total_cross_section=self.sigma_a+self.sigma_f+sigma_s"
+    "        self.total_cross_section=self.sigma_a+self.sigma_f+sigma_s\n",
+    "\n",
+    "\n",
+    "class source:\n",
+    "\n",
+    "    def __init__(self,type:str,r:float):\n",
+    "        self.r=r     \n",
+    "\n",
+    "\n",
+    "\n",
+    "def sample_initial_neutrons(number_of_neutrons,source:object):\n",
+    "    \"\"\" \n",
+    "    will accept the number of neutrons and send their sampled x,y position. \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    x=np.zeros(number_of_neutrons)\n",
+    "    y=np.zeros_like(x)\n",
+    "\n",
+    "    for i in range (number_of_neutrons):\n",
+    "        x[i]=source.r*(np.random.rand()*2-1)\n",
+    "        y[i]=source.r*(np.random.rand()*2-1)\n",
+    "\n",
+    "    return x,y    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#design section \n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "X_left=0\n",
@@ -50,26 +72,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uo2=material(name='fuel',sigma_a=0.2,sigma_f=.3,sigma_s=3,nu=2.5)\n",
+    "h20=material"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "active_batch=100\n",
     "inactive_batch=50\n",
+    "no_of_gen_per_batch=5\n",
+    "number_of_neutrons=10000\n",
     "\n",
     "total_batch=active_batch+inactive_batch\n",
     "\n",
     "scalar_flux = np.zeros((Nx,Ny))\n",
-    "scalar_flux_tl = np.zeros_like (scalar_flux)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_of_neutrons=10000"
+    "scalar_flux_tl = np.zeros_like (scalar_flux)\n",
+    "weights=np.ones(number_of_neutrons)"
    ]
   },
   {
@@ -78,8 +104,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#meshing_part "
+    "for batch in range (active_batch+inactive_batch):\n",
+    "\n",
+    "    for g in range( no_of_gen_per_batch):\n",
+    "\n",
+    "        for n in range(number_of_neutrons):\n",
+    "\n",
+    "            pos=get_particle_pos(n)\n",
+    "            alive=True\n",
+    "            while alive: \n",
+    "\n",
+    "                ''' sample distance first'''\n",
+    "                material=find_mat(pos)\n",
+    "                rand_num=np.random.rand()\n",
+    "                l=-np.log(rand_num)/\n",
+    "                pass "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
