need some more work

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(4203030)\n",
+    "import matplotlib.pyplot as plt\n",
+    "#np.random.seed(4203030)\n",
     "\n",
     "\n",
     "class material:\n",
@@ -19,11 +20,10 @@
     "        self.sigma_f=sigma_f\n",
     "        self.nu=nu\n",
     "\n",
-    "        self.total_cross_section=self.sigma_a+self.sigma_f+sigma_s\n",
+    "        self.sigma_t=self.sigma_a+self.sigma_f+sigma_s\n",
     "\n",
     "\n",
     "class source:\n",
-    "\n",
     "    def __init__(self,type:str,r:float):\n",
     "        self.r=r     \n",
     "\n",
@@ -34,19 +34,17 @@
     "    will accept the number of neutrons and send their sampled x,y position. \n",
     "    \n",
     "    \"\"\"\n",
-    "    x=np.zeros(number_of_neutrons)\n",
-    "    y=np.zeros_like(x)\n",
     "\n",
-    "    for i in range (number_of_neutrons):\n",
-    "        x[i]=source.r*(np.random.rand()*2-1)\n",
-    "        y[i]=source.r*(np.random.rand()*2-1)\n",
+    "    x=np.random.uniform(-source.r,source.r,size=number_of_neutrons)*np.cos(np.random.uniform(0,np.pi*2,size=number_of_neutrons))\n",
+    "    y=np.random.uniform(-source.r,source.r,size=number_of_neutrons)*np.sin(np.random.uniform(0,np.pi*2,size=number_of_neutrons))\n",
     "\n",
-    "    return x,y    "
+    "    return x,y \n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +75,27 @@
    "outputs": [],
    "source": [
     "uo2=material(name='fuel',sigma_a=0.2,sigma_f=.3,sigma_s=3,nu=2.5)\n",
-    "h20=material"
+    "h20=material(name='coolant',sigma_a=.5,sigma_f=0,sigma_s=0.7,nu=0)\n",
+    "\n",
+    "source=source(type='neutron',r=2)\n",
+    "\n",
+    "\n",
+    "def find_mat(pos):\n",
+    "\n",
+    "    x=pos[0]\n",
+    "    y=pos[1]\n",
+    "    \n",
+    "    if x**2+y**2<=4:\n",
+    "        return uo2\n",
+    "    elif(x**2+y**2>4) and abs(x)<=7 and abs (y)<=7 :\n",
+    "        return h20\n",
+    "    else:\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,21 +117,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in range (active_batch+inactive_batch):\n",
     "\n",
-    "    for g in range( no_of_gen_per_batch):\n",
-    "\n",
-    "        for n in range(number_of_neutrons):\n",
-    "\n",
-    "            pos=get_particle_pos(n)\n",
-    "            alive=True\n",
-    "            while alive: \n",
-    "\n",
-    "                ''' sample distance first'''\n",
-    "                material=find_mat(pos)\n",
-    "                rand_num=np.random.rand()\n",
-    "                l=-np.log(rand_num)/\n",
-    "                pass "
+    "x,y=sample_initial_neutrons(number_of_neutrons=number_of_neutrons,source=source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "plt.scatter(x,y,color='g')\n",
+    "plt.plot(4*np.cos(np.linspace(0,np.pi*2)),4*np.sin(np.linspace(0,np.pi*2)),color='red')\n",
+    "plt.xlim(-10,10)\n",
+    "plt.ylim(-10,10)"
    ]
   },
   {
@@ -127,6 +140,66 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch in range (active_batch+inactive_batch):\n",
+    "\n",
+    "    for g in range( no_of_gen_per_batch):\n",
+    "\n",
+    "        for n in range(number_of_neutrons):\n",
+    "\n",
+    "            pos=np.array([x[n],y[n]])\n",
+    "            weight=weights[n]\n",
+    "            alive=True\n",
+    "            \n",
+    "            while alive: \n",
+    "\n",
+    "                ''' sample distance first'''\n",
+    "                material=find_mat(pos)\n",
+    "                rand_num=np.random.rand()\n",
+    "                l=-np.log(rand_num)/material.sigma_t\n",
+    "                \n",
+    "                #sample the angualar direction as well\n",
+    "                mu=np.random.rand()*2-1\n",
+    "                eta=np.sqrt(1-mu**2)\n",
+    "\n",
+    "                new_pos=pos+l*np.array(mu,eta)\n",
+    "\n",
+    "                if find_mat(new_pos)==None: \n",
+    "                    alive=False\n",
+    "                else: \n",
+    "                    '''\n",
+    "                      now we sample the direction \n",
+    "                    '''\n",
+    "                    reaction_type=np.random.choice('scattering','capture','fission',p=[material.sigma_s/material.sigma_t,material.sigma_a/material.sigma_t,material.sigma_f/material.sigma_t])\n",
+    "                    if reaction_type=='scattering':\n",
+    "\n",
+    "                        '''\n",
+    "                            change particle direction by sampling new mu and eta\n",
+    "                        '''\n",
+    "                    elif reaction_type=='capture':\n",
+    "                        ''' \n",
+    "                            kill the particle\n",
+    "                        '''\n",
+    "                    else: \n",
+    "                        ''' as there are only three choice the other one will be fission \n",
+    "                            so adjust particle weight and kill the particle \n",
+    "                        '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.rand()*2-1"
+   ]
   },
   {
    "cell_type": "code",
