added the surface interaction point finder function

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "#np.random.seed(4203030)\n",
+    "\n",
+    "np.random.seed(42000)\n",
     "\n",
     "\n",
     "class material:\n",
@@ -34,12 +35,14 @@
     "    will accept the number of neutrons and send their sampled x,y position. \n",
     "    \n",
     "    \"\"\"\n",
-    "\n",
     "    x=np.random.uniform(-source.r,source.r,size=number_of_neutrons)*np.cos(np.random.uniform(0,np.pi*2,size=number_of_neutrons))\n",
     "    y=np.random.uniform(-source.r,source.r,size=number_of_neutrons)*np.sin(np.random.uniform(0,np.pi*2,size=number_of_neutrons))\n",
     "\n",
     "    return x,y \n",
-    "  \n"
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -79,18 +82,42 @@
     "\n",
     "source=source(type='neutron',r=2)\n",
     "\n",
+    "fuel_rad=5\n",
     "\n",
     "def find_mat(pos):\n",
     "\n",
     "    x=pos[0]\n",
     "    y=pos[1]\n",
     "    \n",
-    "    if x**2+y**2<=4:\n",
+    "    if x**2+y**2<=fuel_rad:\n",
     "        return uo2\n",
-    "    elif(x**2+y**2>4) and abs(x)<=7 and abs (y)<=7 :\n",
+    "    elif(x**2+y**2>fuel_rad) and abs(x)<=X_right and abs (y)<=Y_up :\n",
     "        return h20\n",
     "    else:\n",
-    "        return None"
+    "        return None\n",
+    "    \n",
+    "def find_surface_intersection_point(pos,pos_new):\n",
+    "\n",
+    "    a=pos[0]\n",
+    "    b=pos[1]\n",
+    "    a_new=pos_new[0]\n",
+    "    b_new=pos_new[1]\n",
+    "\n",
+    "    tol=1e-7\n",
+    "\n",
+    "    for i in range (100):\n",
+    "        x=(a+a_new)/2\n",
+    "        y=(b+b_new)/2\n",
+    "\n",
+    "        if abs(x**2+y**2-fuel_rad)<tol:\n",
+    "            break\n",
+    "        elif (x**2+y**2-fuel_rad)>0:\n",
+    "            a_new=x\n",
+    "            b_new=y\n",
+    "        elif (x**2+y**2-fuel_rad)<0:\n",
+    "            a=x\n",
+    "            b=y\n",
+    "    return x,y"
    ]
   },
   {
@@ -100,7 +127,7 @@
    "outputs": [],
    "source": [
     "active_batch=100\n",
-    "inactive_batch=50\n",
+    "inactive_batch=10\n",
     "no_of_gen_per_batch=5\n",
     "number_of_neutrons=10000\n",
     "\n",
@@ -154,42 +181,70 @@
     "        for n in range(number_of_neutrons):\n",
     "\n",
     "            pos=np.array([x[n],y[n]])\n",
+    "\n",
+    "            mu=np.random.rand()*2-1\n",
+    "            eta=np.sqrt(1-mu**2)\n",
+    "            initail_dir=np.array([mu,eta])\n",
+    "\n",
     "            weight=weights[n]\n",
     "            alive=True\n",
+    "\n",
     "            \n",
     "            while alive: \n",
     "\n",
     "                ''' sample distance first'''\n",
     "                material=find_mat(pos)\n",
     "                rand_num=np.random.rand()\n",
+    "                \n",
     "                l=-np.log(rand_num)/material.sigma_t\n",
+    "\n",
+    "                \"\"\" check it the from that position the particle will cross any boundray?\"\"\"\n",
+    "                if find_mat(pos)!=find_mat(pos+l*initail_dir):\n",
+    "\n",
+    "                    '''calculating the boundary crossing position'''\n",
+    "                    x_,y_=find_surface_intersection_point(pos=pos,pos_new=(pos+l*initail_dir))\n",
+    "                    l=np.sqrt((x_-pos[0])**2+(y_-pos[1])**2)\n",
+    "                    \n",
     "                \n",
     "                #sample the angualar direction as well\n",
-    "                mu=np.random.rand()*2-1\n",
-    "                eta=np.sqrt(1-mu**2)\n",
+    "                \n",
     "\n",
-    "                new_pos=pos+l*np.array(mu,eta)\n",
-    "\n",
-    "                if find_mat(new_pos)==None: \n",
+    "                if find_mat(pos)==None: \n",
     "                    alive=False\n",
     "                else: \n",
     "                    '''\n",
     "                      now we sample the direction \n",
     "                    '''\n",
-    "                    reaction_type=np.random.choice('scattering','capture','fission',p=[material.sigma_s/material.sigma_t,material.sigma_a/material.sigma_t,material.sigma_f/material.sigma_t])\n",
+    "                    reaction_type=np.random.choice(['scattering','capture','fission'],p=[material.sigma_s/material.sigma_t,material.sigma_a/material.sigma_t,material.sigma_f/material.sigma_t])\n",
     "                    if reaction_type=='scattering':\n",
+    "                        '''\n",
+    "                            change particle direction by sampling new mu and eta for new direction \n",
+    "                        '''\n",
+    "                        mu=np.random.rand()*2-1\n",
+    "                        eta=np.sqrt(1-mu**2)\n",
+    "                        pos=pos+l*initail_dir\n",
+    "                        initail_dir=np.array([mu,eta])\n",
+    "                        \n",
+    "                        weight=weight*material.sigma_s\n",
+    "                        x_cell_index=int(pos[0]/dx)\n",
+    "                        y_cell_index=int(pos[1]/dy)\n",
     "\n",
-    "                        '''\n",
-    "                            change particle direction by sampling new mu and eta\n",
-    "                        '''\n",
+    "                        scalar_flux[x_cell_index][y_cell_index]=scalar_flux[x_cell_index][y_cell_index]+weight*l\n",
+    "\n",
     "                    elif reaction_type=='capture':\n",
     "                        ''' \n",
     "                            kill the particle\n",
     "                        '''\n",
+    "                        alive=False\n",
+    "                        \n",
     "                    else: \n",
     "                        ''' as there are only three choice the other one will be fission \n",
-    "                            so adjust particle weight and kill the particle \n",
-    "                        '''"
+    "\n",
+    "                            1. adjust particle weight and kill the particle\n",
+    "                            2. keep the record of the fissoion sites \n",
+    "                            3. keep the record of the fission site's weights \n",
+    "                        '''\n",
+    "                        weight=weight*material.sigma_f*material.nu\n"
    ]
   },
   {
@@ -199,6 +254,17 @@
    "outputs": [],
    "source": [
     "np.random.rand()*2-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(20,20))\n",
+    "plt.imshow(scalar_flux)"
    ]
   },
   {
