mesh adaptivity in a 1D1G geomtery (NDE)

--- a/src/main_stat_fine_mesh.ipynb
+++ b/src/main_stat_fine_mesh.ipynb
@@ -131,7 +131,7 @@
     "inactive_batch=20\n",
     "active_batch=total_batch-inactive_batch\n",
     "no_of_gen_per_batch=1\n",
-    "number_of_neutrons=100\n",
+    "number_of_neutrons=10000\n",
     "N=number_of_neutrons\n",
     "\n",
     "total_batch=active_batch+inactive_batch\n",
